fix timeline item names from overflowing if they're really long

--- a/public/styles/organisms/_timeline.scss
+++ b/public/styles/organisms/_timeline.scss
@@ -247,7 +247,7 @@
 .item {
 
 	display: flex;
-	align-items: baseline;
+	align-items: center;
 
 	position: relative;
 	width: 100%;
@@ -268,6 +268,7 @@
 
 .item-amount-wrapper {
 	float: left;
+	flex-shrink: 0;
 
 	.item-amount {
 		font-size: 14px;
@@ -280,7 +281,7 @@
 	float: left;
 	flex-grow: 1;
 	margin: 0 1em 0 0;
-	padding: 0.25em 0 0 0.5em;
+	padding: 0 0 0 0.5em;
 
 	text-align: right;
 	box-sizing: border-box;
